# c-terminal-nim

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  computer.c  computer.h  helper.c  helper.h  main.c  play.c  play.h
